--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -3,26 +3,53 @@ body {
   width: 100%;
 }
 #container {
-  width: 80%;
-  height: 100%;
-  display: flex;
-  margin-left: 150px;
-  font-size: 20px;
+  @media (min-width: 280px) {
+    display: block;
+    width: 100%;
+  }
+  @media (min-width: 1000px) {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    margin-left: 100px;
+    font-size: 20px;
+  }
 }
 
 #left {
   width: 50%;
+  @media (min-width: 280px) {
+    font-size: 15px;
+    width: 20%;
+  }
+  @media (min-width: 1000px) {
+    width: 50%;
+    margin-left: -10px;
+    margin-right: 10px;
+  }
 }
 
 #right {
   width: 50%;
+  @media (min-width: 280px) {
+    font-size: 15px;
+    margin-left: 0px;
+  }
+  @media (min-width: 1000px) {
+    font-size: 1rem;
+  }
 }
 
 .button {
-  display: block;
-  width: 10px;
-  margin-left: 45%;
-  margin-top: 30px;
+  @media (min-width: 280px) {
+    font-size: 80%;
+    margin-left: 35%;
+  }
+  @media (min-width: 280px) {
+    display: block;
+    width: 10px;
+    margin-left: 40%;
+  }
 }
 #button_conf {
   font-size: 20px;
@@ -31,6 +58,13 @@ body {
 
 table {
   background-color: darkgray;
+  @media (min-width: 280px) {
+    font-size: 75%;
+    margin-left: -30px;
+  }
+  @media (min-width: 1000px) {
+    font-size: 1rem;
+  }
 }
 th {
   background-color: darkgray;
@@ -39,11 +73,26 @@ tr {
   background-color: white;
 }
 td {
-  padding: 5px;
+  padding: 3px;
 }
+
 .logo {
-  margin: 10px;
+  @media (min-width: 280px) {
+    width: 50%;
+    margin-left: 20px;
+  }
+  @media (min-width: 1000px) {
+    margin: 10px;
+    width: 280px;
+  }
 }
+
 input {
   border: none;
+  @media (min-width: 280px) {
+    width: 35px;
+  }
+  @media (min-width: 1000px) {
+    width: 60px;
+  }
 }
