--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,6 +11,9 @@
 
 <body>
     <img src="/logo.png" alt="" class="logo" />
+    <h2 class="instructions">You can change the value you need without having to modify them all, ONE HOUR after sending
+        the changes it will
+        be modified in the official page</h2>
     <form action="/post" method="post">
         <section id="container">
             <section id="left">
@@ -40,7 +43,7 @@
         </section>
 
         <section class="button">
-            <button type="submit" id="button_conf">Enviar</button>
+            <button type="submit" id="button_conf">Submit</button>
         </section>
     </form>
 </body>
